cabal-version:      2.4
name:               vase
version:            0.1.0.0
author:             jrvieira
maintainer:         github@jrvieira.com
extra-source-files: CHANGELOG.md

executable vase
    main-is:          Main.hs
    ghc-options: -O2 -threaded -rtsopts -Wall -Wpartial-fields
 -- other-modules:
 -- other-extensions:
    build-depends: base
      , protolude
      , text
      , zero
      , containers
      , network-simple
      , bytestring
      , aeson
    hs-source-dirs: app
    default-language: GHC2021
    default-extensions: NoImplicitPrelude
      , ExtendedDefaultRules
      , OverloadedStrings
      , OverloadedLists

